# ptrt

./: .gitignore  README.md  meson.build  todo.md
examples/: hallow_glass.json
src/: camera.cpp  camera.h  color.cpp  color.h  common.h  constants.h  gen_random.h  hittable.h  hittable_list.cpp  hittable_list.h  main.cpp  material.cpp  material.h  ray.h  scene.cpp  scene.h  sphere.cpp  sphere.h  utils.cpp  utils.h  vec3.h
